@@ -138,7 +138,8 @@ using BestParametersCollection = std::unordered_map<std::string, BestParameters>
 void OverrideParametersFromJSONFiles(const std::vector<std::string>& file_names,
                                      const cl_device_id device, const Precision precision);
 void GetBestParametersFromJSONFile(const std::string& file_name,
-                                   BestParametersCollection& all_parameters);
+                                   BestParametersCollection& all_parameters,
+                                   const Precision precision);
 
 // =================================================================================================
 } // namespace clblast
