@@ -1,6 +1,7 @@
 
 Development (next version)
 - Re-designed and integrated the auto-tuner, no more dependency on CLTune
+- Made it possible to override the tuning parameters in the clients straight from JSON tuning files
 - Added tuned parameters for various devices (see README)
 
 Version 1.2.0
